momentum/css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Anonymous Pro', monospace;
  font-size: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding-top: 3vh;
  padding-bottom: 0;
  text-align: center;
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  color: #ffffff;
  transition: background-image 1s ease-in-out;
  text-shadow: 1px 1px 4px rgb(31, 23, 17), 1px 1px 7px #5f462d;
}

.time {
  font-size: 7rem;
  display: flex;
  justify-content: space-between;
}


.day {
  font-size: 4rem;
}

.weekday {
  font-size: 2.5rem;
}

.greeting,
.focus_intro {
  font-size: 1.7rem;
  margin-right: .5rem;
}

.focus_intro {
  display: block;
  margin-bottom: 10px;
}

.name_text,
.focus_text {
  font-size: 2.2rem;
  max-width: 40vh;
}

.name_label {
  margin: 0 auto;
  margin-bottom: 0.5rem;
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  justify-content: center;
}

.hidden {
  display: none;
}

.name_input,
.focus_input {
  background-color: transparent;
  width: 24vh;
  padding: 0 2vh;
  font-size: 1.7rem;
  border-radius: 1vh;
  outline: none;
  color: white;
  font-family: 'Anonymous Pro', monospace;
  text-shadow: 1px 1px 4px rgb(31, 23, 17), 1px 1px 7px #5f462d;
}

.city_input {
  background-color: transparent;
  width: 15vh;
  padding: 0 2vh;
  font-size: 1rem;
  border-radius: 1vh;
  outline: none;
  color: white;
  font-family: 'Anonymous Pro', monospace;
  text-shadow: 1px 1px 4px rgb(31, 23, 17), 1px 1px 7px #5f462d;

}

.focus_input {
  width: 29vh;
  padding: 0 2vh;
}

.name_input::-webkit-input-placeholder {
  color: red;
  font-size: 1.3rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

.name_input::-moz-placeholder {
  color: red;
  font-size: 1.3rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

/* Firefox 19+ */
.name_input:-moz-placeholder {
  color: red;
  font-size: 1.3rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

/* Firefox 18- */
.name_input:-ms-input-placeholder {
  color: red;
  font-size: 1.3rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

.focus_input::-webkit-input-placeholder {
  color: red;
  font-size: 1.5rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

.focus_input::-moz-placeholder {
  color: red;
  font-size: 1.5rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

/* Firefox 19+ */
.focus_input:-moz-placeholder {
  color: red;
  font-size: 1.5rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

/* Firefox 18- */
.focus_input:-ms-input-placeholder {
  color: red;
  font-size: 1.5rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

.city_input::-webkit-input-placeholder {
  color: red;
  font-size: 0.8rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

.city_input::-moz-placeholder {
  color: red;
  font-size: 0.8rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

/* Firefox 19+ */
.city_input:-moz-placeholder {
  color: red;
  font-size: 0.8rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

/* Firefox 18- */
.city_input:-ms-input-placeholder {
  color: red;
  font-size: 0.8rem;
  font-family: 'Anonymous Pro', monospace;
  text-align: center;
}

.bg-reload {
  width: 4vh;
  height: 4vh;
  background-image: url(../images/reload.svg);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 4vh 4vh;
  border: none;
  background-color: transparent;
  border-radius: 50%;
  cursor: pointer;
  outline: none;
  opacity: 0.8;
  box-shadow: 1px 1px 4px rgb(31, 23, 17), 1px 1px 7px #5f462d;

}

.btn-quote {
  width: 4vh;
  height: 4vh;
  background-image: url(../images/reload.svg);
  background-repeat: no-repeat;
  background-position: top center;
  background-size: 4vh 4vh;
  border: none;
  cursor: pointer;
  outline: none;
  background-color: transparent;
  opacity: 0.8;
  border-radius: 50%;
  box-shadow: 1px 1px 4px rgb(31, 23, 17), 1px 1px 7px #5f462d;
}

.btn-quote:hover {
  transform: scale(1.2);
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  -o-transform: scale(1.2);
  transition:0.5s;
  -webkit-transition:0.5s;
  -moz-transition:0.5s;
  -ms-transition:0.5s;
  -o-transition:0.5s;
}

.btn-quote:active{
  opacity: 0.5;
  transform: scale(1);
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  -o-transform: scale(1);
  transition:0.5s;
  -webkit-transition:0.5s;
  -moz-transition:0.5s;
  -ms-transition:0.5s;
  -o-transition:0.5s;
}

.bg-reload:hover {
  transform: scale(1.2);
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  -o-transform: scale(1.2);
  transition:0.5s;
  -webkit-transition:0.5s;
  -moz-transition:0.5s;
  -ms-transition:0.5s;
  -o-transition:0.5s;
}

.bg-reload:active
 {
  opacity: 0.5;
  transform: scale(1);
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  -o-transform: scale(1);
  transition:0.5s;
  -webkit-transition:0.5s;
  -moz-transition:0.5s;
  -ms-transition:0.5s;
  -o-transition:0.5s;

}

.wrap {
  max-width: 100vw;
  padding: 5vh;
  display: flex;
  color: #ffffff;
  flex-direction: column;
  display: block;
}

.quote-wrap {
  padding: 2vh;
  padding-top: 0.5vh;
  align-items: center;
  color: #ffffff;
  display: block;
  display: flex;
  flex-direction: column-reverse;
  justify-content: space-between;
  min-height: 150px;
}

.quote {
  width: 80%;
  margin: 0;
  text-align: center;
  margin-bottom: 10px;
}

.weather-wrap {
  display: block;
  padding: 20px;
  align-items: center;
  color: #ffffff;
  display: block;
}

.wrap-additions {
  width: 95%;
  min-height: 200px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 0 auto;
  align-items: flex-start;
}

@media (max-width: 600px) {
  body {
    font-size: 14px;
  }

  .time,
  .day {
    font-size: 2.5rem;
    justify-content: center;
  }

  .weather-wrap,
  .quote-wrap {
    margin: 0 auto;
    min-height: 150px;
  }

  .time_block {
    width: 10vh;
  }

  .greeting,
  .focus_intro {
    font-size: 0.9rem;
    margin-right: .5rem;
  }

  .wrap-additions {
    min-height: 150px;
    width: 85%;
  }

  .quote-wrap {
    min-height: 120px;
  }

}

